--- a/our_report.tex
+++ b/our_report.tex
@@ -27,7 +27,7 @@ Fateme Jamal Bafrani \textnormal{(Mentor)} \\
 \newcommand{\fix}{\marginpar{FIX}}
 \newcommand{\new}{\marginpar{NEW}}
 
-%\iclrfinalcopy % Uncomment for camera-ready version, but NOT for submission.
+\iclrfinalcopy % Uncomment for camera-ready version, but NOT for submission.
 \begin{document}
 
 \maketitle
